# trng

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md
scratch/portaudio_demo/: .main.c.swp  CMakeLists.txt  main.c  x.ycm_extra_conf.py
src/: CMakeLists.txt  ISource.h  SourceAudio.cpp  SourceAudio.h  SourcePrng.cpp  SourcePrng.h
src/test/: CMakeLists.txt  TestSourceAudio.cpp  TestSourcePrng.cpp
test/: CMakeLists.txt  foobar.cpp
utility/: CMakeLists.txt  ent_fields.h  utility.cpp  utility.h
utility/test/: CMakeLists.txt  test_utility.cpp
